@@ -30,15 +30,6 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
 
-//compileJava {
-//    doFirst {
-//        options.compilerArgs = [
-//            '--module-path', classpath.asPath,
-//            '--add-modules', 'openai.service'
-//        ]
-//    }
-//}
-
 test {
     useJUnitPlatform()
 }
